Bump Jena 4.6.1 --> 4.8.0
Bump Jena 4.6.1 --> 4.8.0
Bump Wicket 9.12.0 --> 9.13.0
Add JCommander for ingest command line parameter parsing