@@ -64,8 +64,8 @@
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
         <java.version>17</java.version>
-        <jena.ver>4.6.1</jena.ver>
-        <wicket.ver>9.12.0</wicket.ver>
+        <jena.version>4.8.0</jena.version>
+        <wicket.ver>9.13.0</wicket.ver>
         <keycloak.ver>18.0.2</keycloak.ver>
         <embeddedkeycloak.ver>8.0.0</embeddedkeycloak.ver>
         <bioformats.ver>6.10.0</bioformats.ver>
@@ -77,6 +77,7 @@
         <resteasy.version>4.7.4.Final</resteasy.version>
         <infinispan.version>13.0.12.Final</infinispan.version>
         <jgroups.version>4.2.21.Final</jgroups.version>
+        <beakgraph.version>0.2.0</beakgraph.version>
     </properties>
     
     <parent>
@@ -386,7 +387,7 @@
                     <plugin>
                         <groupId>org.graalvm.buildtools</groupId>
                         <artifactId>native-maven-plugin</artifactId>
-                        <version>0.9.20</version>
+                        <version>0.9.21</version>
                         <extensions>true</extensions>
                         <executions>
                             <execution>
@@ -404,11 +405,16 @@
                             <skipNativeBuild>true</skipNativeBuild>
                             <skipNativeTests>true</skipNativeTests>
                             <verbose>true</verbose>
+                            <jvmArgs>
+                                <arg>--add-opens=java.base/java.nio=ALL-UNNAMED</arg>
+                                <arg>--enable-preview</arg>
+                            </jvmArgs>
                             <buildArgs>
                                 <buildArg>--no-fallback</buildArg>
                                 <buildArg>-H:ConfigurationFileDirectories=ingestconfig</buildArg>
                                 <buildArg>--enable-url-protocols=https</buildArg>
                                 <buildArg>-H:+AddAllCharsets</buildArg>
+                                <buildArg>--static</buildArg>
                             </buildArgs>
                         </configuration>
                     </plugin>
@@ -652,37 +658,43 @@
         <dependency>
             <groupId>org.apache.jena</groupId>
             <artifactId>jena-core</artifactId>
-            <version>${jena.ver}</version>
+            <version>${jena.version}</version>
+            <type>jar</type>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.jena</groupId>
+            <artifactId>jena-tdb</artifactId>
+            <version>${jena.version}</version>
             <type>jar</type>
         </dependency>
         <dependency>
             <groupId>org.apache.jena</groupId>
             <artifactId>jena-arq</artifactId>
-            <version>${jena.ver}</version>
+            <version>${jena.version}</version>
             <type>jar</type>
         </dependency>
         <dependency>
             <groupId>org.apache.jena</groupId>
             <artifactId>jena-querybuilder</artifactId>
-            <version>${jena.ver}</version>
+            <version>${jena.version}</version>
             <type>jar</type>
         </dependency>
         <dependency>
             <groupId>org.apache.jena</groupId>
             <artifactId>jena-permissions</artifactId>
             <type>jar</type>
-            <version>${jena.ver}</version>
+            <version>${jena.version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.jena</groupId>
             <artifactId>jena-shacl</artifactId>
-            <version>${jena.ver}</version>
+            <version>${jena.version}</version>
             <type>jar</type>
         </dependency>
         <dependency>
             <groupId>org.apache.jena</groupId>
             <artifactId>jena-fuseki-main</artifactId>
-            <version>${jena.ver}</version>
+            <version>${jena.version}</version>
         </dependency>
         <!--
         <dependency>
@@ -762,7 +774,7 @@
         <dependency>
             <groupId>com.ebremer</groupId>
             <artifactId>BeakGraph</artifactId>
-            <version>0.0.0</version>
+            <version>${beakgraph.version}</version>
         </dependency>
         <!-- DICOM DCM4CHEE
         <dependency>
@@ -831,12 +843,6 @@
             <type>jar</type>
         </dependency>
         <dependency>
-            <groupId>org.apache.jena</groupId>
-            <artifactId>jena-tdb</artifactId>
-            <version>${jena.ver}</version>
-            <type>jar</type>
-        </dependency>
-        <dependency>
             <groupId>io.jsonwebtoken</groupId>
             <artifactId>jjwt-api</artifactId>
             <version>0.11.5</version>
@@ -854,11 +860,17 @@
             <version>0.11.5</version>
             <scope>runtime</scope>
         </dependency>
+        <!--
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <version>1.18.26</version>
             <type>jar</type>
+        </dependency>-->
+        <dependency>
+            <groupId>com.beust</groupId>
+            <artifactId>jcommander</artifactId>
+            <version>1.82</version>
         </dependency>
     </dependencies>
     <pluginRepositories>
